# tap-twitter

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
tap_twitter/: client.py  streams.py  tap.py
tap_twitter/tests/: test_core.py
