[tool.poetry]
name = "tap-twitter"
version = "0.0.1"
description = "`tap-twitter` is a Singer tap for Twitter, built with the Meltano SDK for Singer Taps."
authors = ["Prratek Ramchandani"]
keywords = [
    "ELT",
    "Twitter",
]
license = "Apache 2.0"
packages = [
    { include = "tap_twitter"},
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
singer-sdk = "^0.43.1"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
tox = "^4.23.2"
flake8 = "^3.9.2"
black = "^23.3.0"
pydocstyle = "^6.1.1"
mypy = ">=1.9"
types-requests = "^2.26.1"
isort = "^5.10.1"
pre-commit = "^4.0.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_twitter"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-twitter = 'tap_twitter.tap:TapTwitter.cli'
